--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "axios": "^1.6.0",
     "chart.js": "^4.4.0",
     "localforage": "^1.10.0",
@@ -17,6 +18,8 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
+    "react-idle-timer": "^5.7.2",
     "react-router-dom": "^6.18.0",
     "react-table": "^7.8.0",
     "sort-by": "^1.2.0"
